# llm-attack-kit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/: json_to_csv.py
artifacts/textgrad/: best_prompts.csv  ollama-aia-DeepSeek-R1-Distill-Qwen-32B-Uncensored-i1.json  ollama-cipher64-darkseek-14b.csv  ollama-cipher64-darkseek-14b.json  ollama-dolphin-mixtral-8x22b.csv  ollama-dolphin-mixtral-8x22b.json  ollama-llama2-uncensored-70b.json  ollama-taozhiyuai-llama-3-8b-lexi-uncensored-f16.json  ollama-wizard-vicuna-uncensored-30b.csv  ollama-wizard-vicuna-uncensored-30b.json
gcg/: gcg.ipynb  main.py
gcg/artifacts/: Llama-3.1-8B_answers.csv
pair-ollama/: colab-requirements.txt  pair_on_jbb.ipynb  run.sh
pair-ollama/artifacts/: wandb_export_2025-06-10T03_31_38.776+03_00.csv
textgrad-redteam/: best_prompts.csv  config.py  evaluation.py  filter_best_prompts.py  helper_functions.py  json_to_csv.py  main.py  textgrad-prompt-optimization.ipynb
textgrad-redteam/artifacts/: 'ollama-dolphin-mixtral:8x22b'.csv  'ollama-dolphin-mixtral:8x22b'.json  best_prompts.csv  logs_table.table-10.csv  logs_table.table-10.json  ollama-aia-DeepSeek-R1-Distill-Qwen-32B-Uncensored-i1.csv  ollama-llama2-uncensored-70b.csv  ollama-taozhiyuai-llama-3-8b-lexi-uncensored-f16.csv
