[project]
name = "llm-attack-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "datasets==3.6.0",
    "dill==0.3.8",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "docker-pycreds==0.4.0",
    "filelock==3.18.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.0",
    "gdown==5.2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "graphviz==0.20.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.31.2",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "litellm==1.69.2",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "multiprocess==0.70.16",
    "nanogcg==0.3.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "nvidia-cublas-cu12==12.6.4.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.6.80 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.6.77 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.6.77 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.5.1.17 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.3.0.4 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufile-cu12==1.11.1.6 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.7.77 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.7.1.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.5.4.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.6.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.26.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.6.85 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.6.77 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "ollama==0.4.8",
    "openai==1.75.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "propcache==0.3.1",
    "protobuf==6.31.0",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rpds-py==0.24.0",
    "safetensors==0.5.3",
    "scipy==1.15.3",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.28.0",
    "setproctitle==1.3.6",
    "setuptools==80.7.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "textgrad==0.1.8",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.47.1",
    "triton==3.3.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wandb==0.19.11",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "zipp==3.21.0",
]
